--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-select": "^5.8.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
