--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-redux": "^9.1.2",
     "react-select": "^5.8.1",
     "recharts": "^2.12.7"
   },
