--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
+    "moment": "^2.30.1",
+    "momment": "^0.0.1",
     "next": "14.2.14",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
