--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "classnames": "^2.5.1",
+    "formik": "^2.4.6",
     "moment": "^2.30.1",
     "momment": "^0.0.1",
     "next": "14.2.14",
