--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "react-select": "^5.8.1",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
