--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.2",
     "react-select": "^5.8.1",
     "react-toastify": "^10.0.5",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
