✨ Using services workers

--- a/.env
+++ b/.env
@@ -3,3 +3,10 @@ FINNHUB_API_KEY=crvgfehr01qkji45k8tgcrvgfehr01qkji45k8u0
 NEXT_PUBLIC_ALPHA_VANTAGE_API_KEY=ESMEGZ6KHC1NR7K8
 NEXT_PUBLIC_ALPACA_API_KEY_ID=PK59CZNZ5GT67RU45SY5
 NEXT_PUBLIC_ALPACA_API_SECRET_KEY=gPrqDcujq5xgpOeFsriyp14cN1NZ1FxgbfA19zqL
+
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDlS35S0jgrEdRT01LZSioRpHHQFx61fYY
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=basilisk-6bdbf.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=basilisk-6bdbf
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=basilisk-6bdbf.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=855059464771
+NEXT_PUBLIC_FIREBASE_APP_ID=1:855059464771:web:8412883a4b95e3769d4af6
