--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.30.1",
     "momment": "^0.0.1",
     "next": "14.2.14",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
