🐛 Fixing error ws connection

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_FINNHUB_API_KEY=crvgfehr01qkji45k8tgcrvgfehr01qkji45k8u0
+NEXT_PUBLIC_FINNHUB_API_KEY_WS=cs2kjgpr01qk1hurnfg0cs2kjgpr01qk1hurnfgg
 NEXT_PUBLIC_ALPHA_VANTAGE_API_KEY=ESMEGZ6KHC1NR7K8
 NEXT_PUBLIC_ALPACA_API_KEY_ID=PK59CZNZ5GT67RU45SY5
 NEXT_PUBLIC_ALPACA_API_SECRET_KEY=gPrqDcujq5xgpOeFsriyp14cN1NZ1FxgbfA19zqL
